# dbus-system-share

./: CMakeLists.txt  DBusInterface.cpp  DBusInterface.h  FileFormatRegistry.cpp  FileFormatRegistry.h  FileOpenListener.cpp  FileOpenListener.h  README.md  main.cpp
DEBIAN/: control
dbus/: SystemShare.service
release/: deb
